# Simple-Compiler

./: README.md
PLT_build/: CMakeCache.txt  Makefile  analex  anasyn  cmake_install.cmake  execute  factorielle.lac  table  test1  test_exe.lac
PLT_projet/: CMakeLists.txt
PLT_projet/1_lex/: analex.c  analex.h
PLT_projet/2_syn/: calculate.c  calculate.h
PLT_projet/3_table/: table.c  table.h
PLT_projet/4_execute/: execute.c  execute.h
PLT_projet/test/: projet1.c  projet2.c  projet3.c  projet4.c  test1.c
PLT_projet/tools/: OpTree.c  OpTree.h  Stack.c  Stack.h
rapport/: img.pptx
